[package]
name = "arkview"
version = "4.0.0"
edition = "2021"

[lib]
name = "arkview_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
zip = "0.6"
image = "0.24"
rayon = "1.7"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
